validation-framework/envoy/config/lds.yaml
resources:
  - name: myapp-ingress
    "@type": type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 9443
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          access_log:
            name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /logs/envoy.log
              log_format:
                text_format: |
                   {"from": "%DOWNSTREAM_PEER_SUBJECT%", "start-time": "%START_TIME%", "envoy-direction": "inbound-downstream", "method": "%REQ(:METHOD)%", "path": "%REQ(:PATH)%", "authority": "%REQ(:AUTHORITY)%", "protocol": "%PROTOCOL%", "response-code": "%RESPONSE_CODE%", "duration": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%", "flags": "%RESPONSE_FLAGS%", "upstream-cluster": "%UPSTREAM_CLUSTER%", "upstream-address": "%UPSTREAM_HOST%", "bytes-sent": "%BYTES_SENT%", "bytes-received": "%BYTES_RECEI [...]
            filter:
              not_health_check_filter: {}
          use_remote_address: true
          stat_prefix: ingress-proxy
          server_name: myapp-ingress
          normalize_path: true
          merge_slashes: true
          path_with_escaped_slashes_action: UNESCAPE_AND_FORWARD
          preserve_external_request_id: true
          
          http2_protocol_options:
            allow_connect: true
            max_concurrent_streams: 1024
            initial_connection_window_size: 1048576
            initial_stream_window_size: 65536
          http_filters:
          
          - name: envoy.filters.http.health_check
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
              cluster_min_healthy_percentages:
                local-myapp:
                  value: 100
              headers:
              - name: :path
                exact_match: /healthz
              pass_through_mode: false
          
          - name: envoy.filters.http.custom_response
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              config:
                fail_open: true      
                configuration:
                  "@type": type.googleapis.com/google.protobuf.StringValue
                  value: |
                    {
                      "custom_responses": [
                        {
                          "add_headers": [
                            {
                              "name": "x-auth-resp-audit-event",
                              "value": "true"
                            }
                          ],
                          "match_headers": [
                            {
                              "name": ":path",
                              "pattern": "sw",
                              "value": "/oauth2/tokens/"
                            },
                            {
                              "name": ":method",
                              "pattern": "eq",
                              "value": "GET"
                            },
                            {
                              "name": ":status",
                              "pattern": "eq",
                              "source": "response",
                              "value": "401"
                            }
                          ]
                        },
                        {
                          "add_headers": [
                            {
                              "name": "x-auth-resp-audit-event",
                              "value": "true"
                            }
                          ],
                          "match_headers": [
                            {
                              "name": ":path",
                              "pattern": "sw",
                              "value": "/identity/v1/tokens/"
                            },
                            {
                              "name": ":method",
                              "pattern": "eq",
                              "value": "GET"
                            },
                            {
                              "name": ":status",
                              "pattern": "eq",
                              "source": "response",
                              "value": "401"
                            }
                          ]
                        },
                        {
                          "add_headers": [
                            {
                              "name": "x-auth-resp-audit-event",
                              "value": "true"
                            }
                          ],
                          "match_headers": [
                            {
                              "name": ":path",
                              "pattern": "sw",
                              "value": "/id_epmp_i/v1/tokens/"
                            },
                            {
                              "name": ":method",
                              "pattern": "eq",
                              "value": "GET"
                            },
                            {
                              "name": ":status",
                              "pattern": "eq",
                              "source": "response",
                              "value": "401"
                            }
                          ]
                        }
                      ]
                    }
                name: sps.proxy.wasm.custom_response.filter
                root_id: wasm_filters
                vm_config:
                  vm_id: vm.wasm_filters
                  runtime: "envoy.wasm.runtime.v8"
                  allow_precompiled: true
                  code:
                    local:
                      filename: "/envoy/envoy_proxy_wasm_custom_response_filter.wasm"
          
          - name: envoy.filters.http.jwt_authn
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
              providers:
              rules:
              - match:
                
                  prefix: "/oauth2/tokens/"
                
                  headers:
                  - name: :method
                    exact_match: 'GET'
                requires:
                  requires_any:
                    requirements:
              - match:
                
                  prefix: "/identity/v3/jobs"
                
                requires:
                  requires_any:
                    requirements:
              - match:
                  prefix: /
          
          - name: envoy.filters.http.enrichment
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              config:
                fail_open: false      
                configuration:
                  "@type": type.googleapis.com/google.protobuf.StringValue
                  value: |
                    {
                      "actions": [
                        {
                          "action": "extract",
                          "from": "header.x-epmp-ratelimit-sp",
                          "match_headers": [
                            {
                              "name": ":path",
                              "pattern": "sw",
                              "value": "/identity/v1/authentication"
                            },
                            {
                              "name": ":method",
                              "pattern": "eq",
                              "value": "POST"
                            },
                            {
                              "name": "x-epmp-ratelimit-sp",
                              "pattern": "ex"
                            }
                          ],
                          "to": "x-auth-audit-sp"
                        },
                        {
                          "action": "extract",
                          "from": "header.Authorization",
                          "match_headers": [
                            {
                              "name": ":path",
                              "pattern": "sw",
                              "value": "/oauth2/tokens"
                            },
                            {
                              "name": ":method",
                              "pattern": "eq",
                              "value": "POST"
                            }
                          ],
                          "to": "x-auth-client-id",
                          "transforms": [
                            {
                              "func": "trim_prefix",
                              "parameters": [
                                "Basic "
                              ]
                            },
                            {
                              "func": "base64_decode"
                            },
                            {
                              "func": "scanf",
                              "parameters": [
                                "%s:%_"
                              ]
                            }
                          ]
                        },
                        {
                          "action": "extract",
                          "from": "header.x-auth-client-id",
                          "match_headers": [
                            {
                              "name": ":path",
                              "pattern": "sw",
                              "value": "/oauth2/tokens"
                            },
                            {
                              "name": ":method",
                              "pattern": "eq",
                              "value": "POST"
                            }
                          ],
                          "to": "x-auth-domain-id",
                          "transforms": [
                            {
                              "func": "scanf",
                              "parameters": [
                                "O2ID.%_.%s.%_"
                              ]
                            }
                          ]
                        },
                        {
                          "action": "extract",
                          "from": "query.refresh_token",
                          "match_headers": [
                            {
                              "name": ":path",
                              "pattern": "sw",
                              "value": "/oauth2/tokens"
                            },
                            {
                              "name": ":method",
                              "pattern": "eq",
                              "value": "POST"
                            }
                          ],
                          "to": "x-auth-domain-id",
                          "transforms": [
                            {
                              "func": "scanf",
                              "parameters": [
                                "%_.%_.%s.%_"
                              ]
                            }
                          ]
                        },
                        {
                          "action": "extract",
                          "from": "token.domain_id",
                          "match_headers": [
                            {
                              "name": ":path",
                              "pattern": "sw",
                              "value": "/identity/v1/tokens/"
                            },
                            {
                              "name": ":method",
                              "pattern": "eq",
                              "value": "GET"
                            }
                          ],
                          "to": "x-auth-domain-id"
                        },
                        {
                          "action": "decode",
                          "match_headers": [
                            {
                              "name": ":path",
                              "pattern": "sw",
                              "value": "/oauth2/tokens/"
                            },
                            {
                              "name": ":method",
                              "pattern": "eq",
                              "value": "GET"
                            }
                          ],
                          "path_prefix": "/oauth2/tokens/"
                        },
                        {
                          "action": "extract",
                          "from": "header.Authorization",
                          "match_headers": [
                            {
                              "name": ":path",
                              "pattern": "sw",
                              "value": "/oauth2/clients"
                            },
                            {
                              "invert": true,
                              "name": ":method",
                              "pattern": "eq",
                              "value": "GET"
                            },
                            {
                              "name": "Authorization",
                              "pattern": "sw",
                              "value": "Basic "
                            }
                          ],
                          "to": "x-auth-client-id",
                          "transforms": [
                            {
                              "func": "trim_prefix",
                              "parameters": [
                                "Basic "
                              ]
                            },
                            {
                              "func": "base64_decode"
                            },
                            {
                              "func": "scanf",
                              "parameters": [
                                "%s:%_"
                              ]
                            }
                          ]
                        },
                        {
                          "action": "extract",
                          "from": "header.x-auth-client-id",
                          "match_headers": [
                            {
                              "name": ":path",
                              "pattern": "sw",
                              "value": "/oauth2/clients"
                            },
                            {
                              "invert": true,
                              "name": ":method",
                              "pattern": "eq",
                              "value": "GET"
                            },
                            {
                              "name": "Authorization",
                              "pattern": "sw",
                              "value": "Basic "
                            }
                          ],
                          "to": "x-auth-domain-id",
                          "transforms": [
                            {
                              "func": "scanf",
                              "parameters": [
                                "O2ID.%_.%s.%_"
                              ]
                            }
                          ]
                        },
                        {
                          "action": "extract",
                          "from": "header.x-auth-client-id",
                          "match_headers": [
                            {
                              "name": ":path",
                              "pattern": "sw",
                              "value": "/oauth2/clients"
                            },
                            {
                              "invert": true,
                              "name": ":method",
                              "pattern": "eq",
                              "value": "GET"
                            },
                            {
                              "name": "Authorization",
                              "pattern": "sw",
                              "value": "Basic "
                            }
                          ],
                          "to": "x-auth-customer-id",
                          "transforms": [
                            {
                              "func": "scanf",
                              "parameters": [
                                "O2ID.%s.%_.%_"
                              ]
                            }
                          ]
                        }
                      ],
                      "audits": [
                        {
                          "match_headers": [
                            {
                              "name": ":path",
                              "pattern": "sw",
                              "value": "/identity/v1/authentication"
                            },
                            {
                              "name": ":method",
                              "pattern": "eq",
                              "value": "POST"
                            },
                            {
                              "name": "x-epmp-ratelimit-sp",
                              "pattern": "ex"
                            }
                          ]
                        },
                        {
                          "additional_info": [
                            "request.body[email]"
                          ],
                          "match_headers": [
                            {
                              "name": ":path",
                              "pattern": "sw",
                              "value": "/identity/v1/authentication"
                            },
                            {
                              "name": ":method",
                              "pattern": "eq",
                              "value": "POST"
                            },
                            {
                              "invert": true,
                              "name": "x-epmp-ratelimit-sp",
                              "pattern": "ex"
                            }
                          ]
                        },
                        {
                          "additional_info": [
                            "request.headers[x-auth-client-id]"
                          ],
                          "match_headers": [
                            {
                              "name": ":path",
                              "pattern": "sw",
                              "value": "/oauth2/tokens"
                            },
                            {
                              "name": ":method",
                              "pattern": "eq",
                              "value": "POST"
                            }
                          ]
                        },
                        {
                          "additional_info": [
                            "request.headers[x-auth-audit-sp]",
                            "request.headers[x-auth-customer-sp]",
                            "request.headers[x-auth-domain-sp]"
                          ],
                          "match_headers": [
                            {
                              "name": ":path",
                              "pattern": "sw",
                              "value": "/identity/v1/tokens/"
                            },
                            {
                              "name": ":method",
                              "pattern": "eq",
                              "value": "GET"
                            }
                          ]
                        },
                        {
                          "additional_info": [
                            "request.headers[x-auth-audit-sp]",
                            "request.headers[x-auth-customer-sp]",
                            "request.headers[x-auth-domain-sp]"
                          ],
                          "match_headers": [
                            {
                              "name": ":path",
                              "pattern": "sw",
                              "value": "/oauth2/tokens/"
                            },
                            {
                              "name": ":method",
                              "pattern": "eq",
                              "value": "GET"
                            }
                          ]
                        }
                      ],
                      "authentication_path": "/id_epmp_i/v1/authentication?response_type=token",
                      "identity_host": "local-myapp",
                      "rbacs": [
                        {
                          "match_headers": [
                            {
                              "name": ":path",
                              "pattern": "sw",
                              "value": "/identity/v3/jobs"
                            }
                          ],
                          "policies": [
                            {
                              "name": "jobs",
                              "rules": [
                                {
                                  "lop": "request.token[scope]",
                                  "op": "co",
                                  "val": "system"
                                },
                                {
                                  "lop": "request.token[privs]",
                                  "op": "co",
                                  "val": "icds:maint:purge"
                                }
                              ]
                            }
                          ]
                        },
                        {
                          "match_headers": [
                            {
                              "name": ":path",
                              "pattern": "sw",
                              "value": "/identity/maintenance/v1/domain_remapping"
                            },
                            {
                              "name": ":method",
                              "pattern": "eq",
                              "value": "POST"
                            }
                          ],
                          "policies": [
                            {
                              "name": "domain_remapping",
                              "rules": [
                                {
                                  "lop": "request.token[scope]",
                                  "op": "co",
                                  "val": "system"
                                },
                                {
                                  "lop": "request.token[privs]",
                                  "op": "co",
                                  "val": "domain_remapping"
                                }
                              ]
                            }
                          ]
                        },
                        {
                          "match_headers": [
                            {
                              "name": ":path",
                              "pattern": "sw",
                              "value": "/identity/maintenance/v1/domain_remapping"
                            }
                          ],
                          "policies": [
                            {
                              "name": "domain_remapping",
                              "rules": [
                                {
                                  "lop": "request.token[scope]",
                                  "op": "co",
                                  "val": "system"
                                },
                                {
                                  "lop": "request.token[privs]",
                                  "op": "co",
                                  "val": "domain_remapping"
                                }
                              ]
                            }
                          ]
                        }
                      ],
                      "tenancy_check": true
                    }
                name: sps.proxy.wasm.enrichment.filter
                root_id: wasm_filters
                vm_config:
                  vm_id: vm.wasm_filters
                  runtime: "envoy.wasm.runtime.v8"
                  allow_precompiled: true
                  code:
                    local:
                      filename: "/envoy/envoy_proxy_wasm_enrichment_filter.wasm"
          
            
            
          
          - name: envoy.filters.http.ratelimit
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
              domain: myapp
              failure_mode_deny: false
              enable_x_ratelimit_headers: DRAFT_VERSION_03
              rate_limit_service:
                transport_api_version: V3
                grpc_service:
                  envoy_grpc:
                    cluster_name: ratelimit
                  timeout: 0.5s
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              upstream_log:
              - name: envoy.file_access_log
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  path: /logs/envoy.log
                  log_format:
                    text_format: |
                      {"start-time": "%START_TIME%", "envoy-direction": "inbound-upstream", "method": "%REQ(:METHOD)%", "path": "%REQ(:PATH)%", "authority": "%REQ(:AUTHORITY)%", "protocol": "%PROTOCOL%", "response-code": "%RESPONSE_CODE%", "flags": "%RESPONSE_FLAGS%", "upstream-cluster": "%UPSTREAM_CLUSTER%", "upstream-address": "%UPSTREAM_HOST%", "bytes-sent": "%BYTES_SENT%", "bytes-received": "%BYTES_RECEIVED%", "customerId": "%REQ(X-EPMP-CUSTOMER-ID)%", "domainId": "%REQ(X-EPMP-DOMAIN-ID)%",  [...]
                filter:
                  not_health_check_filter: {}
          route_config:
            name: myapp-ingress
            internal_only_headers:
            - x-envoy-original-path
            request_headers_to_add: []
            virtual_hosts:
            - domains: '*'
              name: myapp-ingress
            
              virtual_clusters:
              - name: post_authentication
              
              
                headers:
                - name: :path
                  prefix_match: '/identity/v1/authentication'
                - name: :method
                  exact_match: 'POST'
                - name: x-epmp-ratelimit-sp
                  present_match: true
                  invert_match: true
              - name: post_oauth2_tokens
              
              
                headers:
                - name: :path
                  prefix_match: '/oauth2/tokens'
                - name: :method
                  exact_match: 'POST'
              - name: get_v1_token
              
              
                headers:
                - name: :path
                  prefix_match: '/identity/v1/tokens/'
                - name: :method
                  exact_match: 'GET'
              - name: get_v2_token
              
              
                headers:
                - name: :path
                  prefix_match: '/oauth2/tokens/'
                - name: :method
                  exact_match: 'GET'
              - name: get_openid_document
              
              
                headers:
                - name: :path
                  prefix_match: '/.well-known/'
              - name: all_oauth2_calls
              
              
                headers:
                - name: :path
                  prefix_match: '/oauth2/'
              - name: all_identity_calls
              
              
                headers:
                - name: :path
                  prefix_match: '/identity/'
              - name: "_all_"
              
              
                headers:
                - name: :path
                  prefix_match: '/'
            
              rate_limits:
              - actions:
                - header_value_match:
                    descriptor_value: oidc_login_497cb6811f2fc123
                  
                  
                    headers:
                    - name: :path
                      prefix_match: '/identity/v1/authentication'
                    - name: :method
                      exact_match: 'POST'
                    - name: x-epmp-ratelimit-sp
                      present_match: true
                - request_headers:
                    header_name: x-epmp-ratelimit-sp
                    descriptor_key: key_cf236a0e2b8123dc
              - actions:
                - header_value_match:
                    descriptor_value: authentication_a69bec24fe2dade6
                  
                  
                    headers:
                    - name: :path
                      prefix_match: '/identity/v1/authentication'
                    - name: :method
                      exact_match: 'POST'
                    - name: x-epmp-ratelimit-sp
                      present_match: true
                      invert_match: true
                - request_headers:
                    header_name: x-epmp-domain-id
                    descriptor_key: key_90b93ca80aab08ef
              - actions:
                - header_value_match:
                    descriptor_value: post_oauth2_token_symantec_domain_c4904466c6d20791
                  
                  
                    headers:
                    - name: :path
                      prefix_match: '/oauth2/tokens'
                    - name: :method
                      exact_match: 'POST'
                    - name: x-auth-client-id
                      present_match: true
                    - name: x-auth-domain-id
                      exact_match: 'symantecdomain1'
                - request_headers:
                    header_name: x-auth-client-id
                    descriptor_key: key_2552c29574ad90e2
              - actions:
                - header_value_match:
                    descriptor_value: post_oauth2_token_a08fc479a3144a02
                  
                  
                    headers:
                    - name: :path
                      prefix_match: '/oauth2/tokens'
                    - name: :method
                      exact_match: 'POST'
                    - name: x-auth-client-id
                      present_match: true
                    - name: x-auth-domain-id
                      exact_match: 'symantecdomain1'
                      invert_match: true
                - request_headers:
                    header_name: x-auth-domain-id
                    descriptor_key: key_50e931904607af12
              - actions:
                - header_value_match:
                    descriptor_value: token_validation_ver_1_f2266b6f57507497
                  
                  
                    headers:
                    - name: :path
                      prefix_match: '/identity/v1/tokens/'
                    - name: :method
                      exact_match: 'GET'
                - request_headers:
                    header_name: x-auth-domain-id
                    descriptor_key: key_30288c0acb8c407d
              routes:
              - match:
                
                  prefix: "/identity/v1/authentication"
                
                  headers:
                  - name: :method
                    exact_match: 'POST'
                  - name: x-epmp-ratelimit-sp
                    present_match: true
                
                route:
                  cluster: local-myapp
                  prefix_rewrite: /id_epmp_i/v1/authentication
                  retry_policy:
                    num_retries: 1
                    retry_on: reset,connect-failure,refused-stream,retriable-status-codes
                  timeout: 15s
              - match:
                
                  prefix: "/identity/v1/authentication"
                
                  headers:
                  - name: :method
                    exact_match: 'POST'
                  - name: x-epmp-ratelimit-sp
                    present_match: true
                    invert_match: true
                
                route:
                  cluster: local-myapp
                  prefix_rewrite: /id_epmp_i/v1/authentication
                  retry_policy:
                    num_retries: 1
                    retry_on: reset,connect-failure,refused-stream,retriable-status-codes
                  timeout: 15s
              - match:
                
                  prefix: "/oauth2/tokens"
                
                  headers:
                  - name: :method
                    exact_match: 'POST'
                
                route:
                  cluster: local-myapp
                  prefix_rewrite: /id_epmp_i/oauth2/tokens
                  retry_policy:
                    num_retries: 1
                    retry_on: reset,connect-failure,refused-stream,retriable-status-codes
                  timeout: 15s
              - match:
                
                  prefix: "/identity/v1/tokens/"
                
                  headers:
                  - name: :method
                    exact_match: 'GET'
                
                route:
                  cluster: local-myapp
                  prefix_rewrite: /id_epmp_i/v1/tokens/
                  retry_policy:
                    num_retries: 1
                    retry_on: reset,connect-failure,refused-stream,retriable-status-codes
                  timeout: 15s
              - match:
                
                  prefix: "/identity/v3/jobs"
                
                
                route:
                  cluster: local-myapp
                  prefix_rewrite: /id_epmp_i/v3/jobs
                  retry_policy:
                    num_retries: 1
                    retry_on: reset,connect-failure,refused-stream,retriable-status-codes
                  timeout: 15s
              - match:
                
                  prefix: "/.well-known/"
                
                
                route:
                  cluster: local-myapp
                  prefix_rewrite: /id_epmp_i/.well-known/
                  retry_policy:
                    num_retries: 1
                    retry_on: reset,connect-failure,refused-stream,retriable-status-codes
                  timeout: 15s
              - match:
                
                  prefix: "/oauth2/clients"
                
                  headers:
                  - name: :method
                    exact_match: 'GET'
                    invert_match: true
                  - name: Authorization
                    prefix_match: 'Basic '
                
                route:
                  cluster: local-myapp
                  prefix_rewrite: /id_epmp_i/oauth2/clients
                  retry_policy:
                    num_retries: 1
                    retry_on: reset,connect-failure,refused-stream,retriable-status-codes
                  timeout: 15s
              - match:
                
                  prefix: "/oauth2/"
                
                
                route:
                  cluster: local-myapp
                  prefix_rewrite: /id_epmp_i/oauth2/
                  retry_policy:
                    num_retries: 1
                    retry_on: reset,connect-failure,refused-stream,retriable-status-codes
                  timeout: 15s
              - match:
                
                  prefix: "/identity/maintenance/v1/domain_remapping"
                
                  headers:
                  - name: :method
                    exact_match: 'POST'
                
                route:
                  cluster: local-myapp
                  prefix_rewrite: /id_epmp_i/maintenance/v1/domain_remapping
                  retry_policy:
                    num_retries: 1
                    retry_on: reset,connect-failure,refused-stream,retriable-status-codes
                  timeout: 15s
              - match:
                
                  prefix: "/identity/maintenance/v1/domain_remapping"
                
                
                route:
                  cluster: local-myapp
                  prefix_rewrite: /id_epmp_i/maintenance/v1/domain_remapping
                  retry_policy:
                    num_retries: 1
                    retry_on: reset,connect-failure,refused-stream,retriable-status-codes
                  timeout: 15s
              - match:
                
                  prefix: "/identity/"
                
                
                route:
                  cluster: local-myapp
                  prefix_rewrite: /id_epmp_i/
                  retry_policy:
                    num_retries: 1
                    retry_on: reset,connect-failure,refused-stream,retriable-status-codes
                  timeout: 15s
              - match:
                
                  prefix: "/r3_epmp_i/"
                
                
                route:
                  cluster: local-myapp
                  prefix_rewrite: /id_epmp_i/
                  retry_policy:
                    num_retries: 1
                    retry_on: reset,connect-failure,refused-stream,retriable-status-codes
                  timeout: 15s
              - match:
                  prefix: /
                route:
                  cluster: local-myapp
                  retry_policy:
                    num_retries: 1
                    retry_on: reset,connect-failure,refused-stream,retriable-status-codes
                  timeout: 15s
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificate_sds_secret_configs:
            - name: tls_sds
              sds_config:
                path: /envoy/config/envoy-sds.yaml
            validation_context: {}
            alpn_protocols:
            - h2
            - http/1.1
